--- a/styles/app.css
+++ b/styles/app.css
@@ -66,7 +66,7 @@ p { font-size: .8rem; }
 /*--------------------
   CTA Styles
   --------------*/
-  .site_primary--cta { display: inline-block; padding: 12px 24px; background-color: #007BFF; color: #fff; font-family: "Geist Mono", monospace; font-weight: 500; border-radius: 4px; transition: background-color 0.3s ease; }
+.site_primary--cta { display: inline-block; padding: 12px 24px; background-color: #007BFF; color: #fff; font-family: "Geist Mono", monospace; font-weight: 500; border-radius: 4px; transition: background-color 0.3s ease; }
 
 
 /*---------------
@@ -81,8 +81,12 @@ p { font-size: .8rem; }
 .menu_button span:has(img) { max-width: 70px; width: 100%; }
 .navigation_right.site_flex-item { justify-content: flex-end; }
 .menu_button { align-items: center; }
+
+/*---------------
+  Hero Styles
+  -----------*/
 .hero_inner { position: relative; display: flex; justify-content: center; align-items: center; width: 100%; height: 100%; }
-.hero_content-blocks { position: absolute; z-index: 2; width: 100%; height: 100%; display: flex; justify-content: space-around; align-items: center; flex-direction: column; text-align: center; color: #fff; ; }
+.hero_content-blocks { position: absolute; z-index: 2; width: 100%; height: 100%; display: flex; justify-content: space-around; align-items: center; flex-direction: column; text-align: center; color: #fff; }
 .hero__block-eyebrow h1 { font-weight: 400; }
 .hero__block-beneath p { font-size: clamp(16px,.85svw + .85svh,30px); }
 .hero__block-eyebrow span {
@@ -178,7 +182,7 @@ p { font-size: .8rem; }
 }
 
 .portfolio_block-index {
- z-index: 3;
+  z-index: 3;
   display: flex;
   gap: 20px;
   height: 100%;
@@ -206,8 +210,6 @@ p { font-size: .8rem; }
   padding: 20px 0;
 }
 
-
-
 .index_item {
   display: flex;
   align-items: center;
@@ -216,19 +218,18 @@ p { font-size: .8rem; }
   gap: 10px;
 }
 
-.index_item-active-bar{
+.index_item-active-bar {
   height: 2px;
   width: 0px;
   background: #fff;
   display: flex;
-    transition: width 0.5s ease;
-    will-change: width;
+  transition: width 0.5s ease;
+  will-change: width;
 }
 
 .index_item.active .index_item-active-bar {
   width: 20px;
 }
-
 
 .index_item span:first-child {
   transition: 0.3s color ease;
@@ -239,10 +240,10 @@ p { font-size: .8rem; }
 }
 
 .progress_bar {
-width: 2px;
+  width: 2px;
   height: 100%;
   background: rgba(255, 255, 255, 0.2);
-position: absolute;
+  position: absolute;
   right: -15px;
 }
 
@@ -269,212 +270,23 @@ position: absolute;
   position: absolute;
   height: 100%;
   width: 100%;
-}
-
-.about_background :is(picture, img) {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;}
-.menu_button { align-items: center; }
-.hero_inner { position: relative; display: flex; justify-content: center; align-items: center; width: 100%; height: 100%; }
-.hero_content-blocks { position: absolute; z-index: 2; width: 100%; height: 100%; display: flex; justify-content: space-around; align-items: center; flex-direction: column; text-align: center; color: #fff; ; }
-.hero__block-eyebrow h1 { font-weight: 400; }
-.hero__block-beneath p { font-size: clamp(16px,.85svw + .85svh,30px); }
-.hero__block-eyebrow span {
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-  height: 1.3em;
-  overflow: clip;
 }
 
 /*---------------
-  Portfolio Styles
+  About Section Styles
   ---------------*/
 
-.portfolio {
-  height: 100vh;
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio_inner {
-  height: 100%;
-  width: 100%;
-}
-
-.portfolio_blocks {
-  height: 100%;
-  width: 100%;
-  position: relative;
-}
-
-.portfolio_block-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-
-.slide-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  object-fit: cover;
-  will-change: opacity, transform;
-}
-
-.slide-bg img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.portfolio_block-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  padding: 6vw 7vw;
-  pointer-events: none;
-}
-
-.portfolio_block-content-inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 6vw 7vw;
-  opacity: 0;
-  visibility: hidden;
-}
-
-.portfolio_block-content-inner.active {
-  opacity: 1;
-  visibility: visible;
-}
-
-.portfolio_block-content-description {
-  max-width: 500px;
-  pointer-events: auto;
-}
-
-.portfolio_block-index {
- z-index: 3;
-  display: flex;
-  gap: 20px;
-  height: 100%;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 2vw;
-  max-width: fit-content;
-  right: 0;
-}
-
-.index_wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  position: relative;
-}
-
-.portfolio_index-items {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  font-size: 18px;
-  gap: 20px;
-  padding: 20px 0;
-}
-
-
-
-.index_item {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex-direction: row-reverse;
-  gap: 10px;
-}
-
-.index_item-active-bar{
-  height: 2px;
-  width: 0px;
-  background: #fff;
-  display: flex;
-    transition: width 0.5s ease;
-    will-change: width;
-}
-
-.index_item.active .index_item-active-bar {
-  width: 20px;
-}
-
-
-.index_item span:first-child {
-  transition: 0.3s color ease;
-}
-
-.index_item.active span {
-  color: #ffffff75;
-}
-
-.progress_bar {
-width: 2px;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.2);
-position: absolute;
-  right: -15px;
-}
-
-.progress {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 0%;
-  background: #fff;
-}
-
-.portfolio_block-background::after {
-  content: '';
-  position: absolute;
-  background: #00000075;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
-.portfolio_block-background {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
-
 .about_background :is(picture, img) {
   height: 100%;
   width: 100%;
   object-fit: cover;
   position: relative;
 }
-.about_background[data-overlay]:first-child{
+
+.about_background[data-overlay]:first-child {
   z-index: 0;
 }
+
 .about_background picture::after {
   content: '';
   position: absolute;
@@ -497,202 +309,7 @@ position: absolute;
   left: 0;
   padding: 0 5vw;
   z-index: 1;
-  opacity: 0; /* Hidden by default, GSAP will handle visibility */
-  visibility: hidden;
-}
-
-.about_content-wrapper.active {
-  opacity: 1;
-  visibility: visible;
-}
-.portfolio_block-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-
-.slide-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   opacity: 0;
-  object-fit: cover;
-  will-change: opacity, transform;
-}
-
-.slide-bg img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.portfolio_block-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  padding: 6vw 7vw;
-  pointer-events: none;
-}
-
-.portfolio_block-content-inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 6vw 7vw;
-  opacity: 0;
-  visibility: hidden;
-}
-
-.portfolio_block-content-inner.active {
-  opacity: 1;
-  visibility: visible;
-}
-
-.portfolio_block-content-description {
-  max-width: 500px;
-  pointer-events: auto;
-}
-
-.portfolio_block-index {
- z-index: 3;
-  display: flex;
-  gap: 20px;
-  height: 100%;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 2vw;
-  max-width: fit-content;
-  right: 0;
-}
-
-.index_wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  position: relative;
-}
-
-.portfolio_index-items {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  font-size: 18px;
-  gap: 20px;
-  padding: 20px 0;
-}
-
-
-
-.index_item {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex-direction: row-reverse;
-  gap: 10px;
-}
-
-.index_item-active-bar{
-  height: 2px;
-  width: 0px;
-  background: #fff;
-  display: flex;
-    transition: width 0.5s ease;
-    will-change: width;
-}
-
-.index_item.active .index_item-active-bar {
-  width: 20px;
-}
-
-
-.index_item span:first-child {
-  transition: 0.3s color ease;
-}
-
-.index_item.active span {
-  color: #ffffff75;
-}
-
-.progress_bar {
-width: 2px;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.2);
-position: absolute;
-  right: -15px;
-}
-
-.progress {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 0%;
-  background: #fff;
-}
-
-.portfolio_block-background::after {
-  content: '';
-  position: absolute;
-  background: #00000075;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
-.portfolio_block-background {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
-
-.about_background :is(picture, img) {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  position: relative;
-}
-.about_background[data-overlay]:first-child{
-  z-index: 0;
-}
-.about_background picture::after {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: #00000040;
-  top: 0;
-  left: 0;
-}
-
-.about_content-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 6vw;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0 5vw;
-  z-index: 1;
-  opacity: 0; /* Hidden by default, GSAP will handle visibility */
   visibility: hidden;
 }
 
@@ -760,6 +377,15 @@ position: absolute;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.background_clip {
+  clip-path: circle(0% at 50% 100%);
+  z-index: 2;
+}
+
+.background_last {
+  z-index: 3;
 }
 
 .creation_content {
